--- a/endnote.bib
+++ b/endnote.bib
@@ -81,6 +81,15 @@ Section: Biological Sciences}
 	note = {\_eprint: https://doi.org/10.1146/annurev-neuro-101822-122427},
 }
 
+  @manual{Aust_2022_papaja,
+    title = {{papaja}: {Prepare} reproducible {APA} journal articles
+      with {R Markdown}},
+    author = {Frederik Aust and Marius Barth},
+    year = {2022},
+    note = {R package version 0.1.1},
+    url = {https://github.com/crsh/papaja},
+  }
+
 @article{bortolon_self-face_2018,
 	title = {Self-face advantage over familiar and unfamiliar faces: {A} three-level meta-analytic approach},
 	volume = {25},
